# tisc

./: .gitignore  README.md  pyproject.toml
simulation/: tisc.circ
src/TeenyISC/: __init__.py  __main__.py  console_writer.py  devices.py  mem_reader.py  memory_devices.py  util.py
src/TeenyISC/speed/: __init__.py
src/distasm/: __init__.py  __main__.py
src/tasmc/: __main__.py  compiler.py  consts.py  files.py  insts.py  tokeniser.py  tokens.py
src/tasmc/bitfield/: __init__.py
tests/: example_prog.tasm  simple_devices.tasm
