
[tool.poetry]
name = "TISC"
version = "0.1.0"
description = "An 8 bit ISA"
authors = ["WizzyGeek <ojasscoding@gmail.com>"]
license = "MIT"

packages = [
    {include="tasmc", from="src"},
    {include="distasm", from="src"}
]

[tool.poetry.scripts]
tasmc = "tasmc.__main__:main"
distasm = "distasm.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
